examples/test/testpolicy14979.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14979
  namespace: namespace370
spec:
  podSelector:
    matchLabels:
      key12: value15
      key18: value0
      key27: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value45
          key0: value24
      podSelector:
        matchLabels:
          key38: value35
